# ruxt-website

./: .gitignore  Cargo.toml  README.md  tailwind.config.js
src/: main.rs  util.rs
src/pages/: index.rs  mod.rs
src/pages/docs/: commands.rs  dynamic_paths.rs  index.rs  installation.rs  mod.rs  routing.rs
src/public/styles/: output.css  style.css
src/templates/: docs.html  index.html
src/templates/components/: codeblock.html
src/templates/docs/: commands.html  getting-started.html  installation.html  path.html  routing.html
