[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
ruxt = "0.1.2"
serde = { version = "1.0.200", features = ["derive"] }
tera = "1.19.1"
